# llama-vlm-android

./: .gitignore  AndroidManifest.xml  BUILD_LLAMACPP_ANDROID_README.md  LICENSE  README.md  SETUP.md  build-llamacpp-android.sh  build-mtmd-inference-api.ps1  build-mtmd-inference-api.sh  build-sherpa-from-source.ps1  build-sherpa-from-source.sh  build.gradle.kts  buildAPK.ps1  buildAPK.sh  gradle.properties  gradlew  gradlew.bat  index.html  open-in-studio.ps1  settings.gradle.kts  setup-config.ps1  setup-config.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md  config.json
app/src/main/cpp/: CMakeLists.txt  android_tts.cpp  debug-flags.h  mtmd-inference-jni.cpp  native-lib.cpp  server-jni.cpp  vlm-impl.cpp
app/src/main/cpp/include/: api.hpp  config.hpp  encode.hpp  json_parser.hpp
app/src/main/cpp/utils/: api.cpp  config.cpp  encode.cpp  json_parser.cpp
app/src/main/java/com/misar/vlmanalyze/: AudioRecorder.kt  Backend.kt  CameraCaptureActivity.kt  CameraPermissionHelper.kt  CameraUtils.kt  Config.kt  HttpClient.kt  LlamaServerService.kt  LocalBackend.kt  LocalInferenceBackend.kt  LocalInferenceService.kt  MainActivity.kt  OverlayViewService.kt  ScreenCaptureService.kt  SherpaTranscriber.kt  TestAllBackendsActivity.kt  TestAutoInferenceActivity.kt  TtsHelper.kt  VlmAnalyzer.kt  VlmApplication.kt  VoiceCaptureService.kt  VoiceInputListener.kt  VoiceInputManager.kt  VoiceKeywords.kt
app/src/main/res/drawable/: circle_button_background.xml  circle_capture_button.xml  ic_capture.xml  ic_microphone.xml  ic_switch_camera.xml
app/src/main/res/layout/: activity_camera_capture.xml  activity_main.xml  dialog_server_settings.xml  dialog_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
docs/: index.html
gradle/: libs.versions.toml
mtmd-inference-api/: CMakeLists.txt  README.md  mtmd-inference-api.cpp  mtmd-inference-api.h  test.cpp
